@@ -14,6 +14,7 @@ v8.3.0
 - WL#16015: Remove use of removed COM_ commands
 - WL#15983: Stop using mysql_ssl_set api
 - WL#15982: Remove use of mysql_shutdown
+- WL#15950: Support query parameters for prepared statements
 - WL#15942: Improve type hints and standardize byte type handling
 - WL#15836: Split mysql and mysqlx into different packages
 - WL#15523: Support Python DB API asynchronous execution
